[package]
name = "cbitset"
description = "A bit set, being able to hold a fixed amount of booleans in an array of integers"
version = "0.2.0"
authors = ["jD91mZM2 <me@krake.one>"]
repository = "https://gitlab.redox-os.org/redox-os/cbitset"
readme = "README.md"
license = "MIT"
keywords = ["no_std"]
categories = ["no-std"]

[dependencies.num-traits]
default-features = false
version = "0.2.8"
