[package]
name = "rbitset"
description = "A bit set, being able to hold a fixed amount of booleans in an array of integers"
version = "0.2.0"
authors = [
    "jD91mZM2 <me@krake.one>",
    "Eric Shimizu Karbstein <gr41.j4ck@gmail.com>",
]
repository = "https://gitlab.redox-os.org/redox-os/cbitset"
readme = "README.md"
license = "MIT"
keywords = ["no_std", "bitset"]
categories = ["no-std"]
edition = "2021"


[dependencies]
num-traits = { version = "0.2.8", default-features = false }
