[package]
name = "rbitset"
description = "A bit set, being able to hold a fixed amount of booleans in an array of integers"
version = "0.3.1"
authors = [
    "Eric Shimizu Karbstein <gr41.j4ck@gmail.com>",
    "jD91mZM2 <me@krake.one>",
]
repository = "https://github.com/GrayJack/rbitset"
readme = "README.md"
license = "MIT"
keywords = ["no_std", "bitset", "set"]
categories = ["data-structures", "no-std"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "_doc"]

[dependencies]
num-traits = { version = "0.2.8", default-features = false }
serde = { version = "1.0.0", default-features = false, optional = true }

[features]
serde = ["dep:serde"]
